--- a/src/scss/selectUser.scss
+++ b/src/scss/selectUser.scss
@@ -14,6 +14,7 @@
     //   margin-left: 20px;
     // }
     .menuIcon {
+      cursor: pointer;
       background: $dark-color;
       color: white;
       padding: 9px 11px;
@@ -22,6 +23,7 @@
   }
   ul {
     position: absolute;
+    z-index: 2;
     bottom: 60px;
     left: 0px;
     li {
@@ -39,9 +41,28 @@
         rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
     button {
+      cursor: pointer;
       padding: 5px;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
         rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    }
+  }
+}
+
+@media (max-width: 640px) {
+  .selectUserContainer {
+    left: auto;
+    right: 30px;
+    bottom: 100px;
+    ul {
+      left: auto;
+      right: 0;
+      li {
+        flex-direction: row-reverse;
+      }
+      div {
+        margin: 0 0 0 10px;
+      }
     }
   }
 }
