--- a/src/css/addUser.css
+++ b/src/css/addUser.css
@@ -53,10 +53,16 @@ body {
     display: flex;
     align-items: flex-end; }
   .addUserContainer input {
-    margin-right: 20px;
+    margin: 0 20px;
     padding: 20px;
-    width: 300px; }
+    width: 300px;
+    z-index: 0; }
   .addUserContainer button {
     padding: 9px 10px;
     background: #1c4000;
-    color: white; }
+    color: white;
+    z-index: 1; }
+
+@media (max-width: 440px) {
+  .addUserContainer input {
+    width: 100%; } }
