--- a/src/scss/addData.scss
+++ b/src/scss/addData.scss
@@ -9,12 +9,21 @@
 
   input {
     padding: 20px;
-    width: 40%;
-    margin-right: 20px;
+    width: 500px;
+    margin: 0 20px;
   }
   button {
     background: $dark-color;
     color: white;
     padding: 10px 11px;
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 640px) {
+  .addContainer {
+    input {
+      width: 70%;
+    }
   }
 }
