--- a/src/scss/dataList.scss
+++ b/src/scss/dataList.scss
@@ -3,14 +3,14 @@
 .dataListContainer {
   ul {
     color: $dark-color;
-    margin: 20px;
+    margin: 10px;
     @extend %centrofy;
     flex-wrap: wrap;
     justify-content: flex-start;
   }
   li {
     min-width: 150px;
-    height: 100px;
+    max-width: 100%;
     @extend %centrofy;
     flex-direction: column;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
@@ -18,13 +18,19 @@
     margin: 10px;
     padding: 20px;
     border-radius: 20px;
+    div {
+      width: 100%;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      text-align: center;
+    }
 
     button {
       font-family: "Sacramento", cursive;
       font-size: 1.2rem;
       color: $dark-color;
     }
-    div {
+    section {
       //   outline: 1px solid black;
       margin-top: 20px;
       width: 100%;
