--- a/src/css/dataList.css
+++ b/src/css/dataList.css
@@ -49,7 +49,7 @@ body {
   color: #1c4000;
   margin: 10px;
   flex-wrap: wrap;
-  justify-content: flex-start; }
+  justify-content: center; }
 
 .dataListContainer li {
   min-width: 150px;
